logs/validate.20260326-164803.log
error[E0308]: mismatched types
   --> src/Chap55/CycleDetectStEph.rs:186:19
    |
180 |     proof fn lemma_extract_ord(
    |              ----------------- implicitly returns `()` as its body has no tail or `return` expression
...
186 |     ) -> (result: (Map<int, nat>, nat))
    |                   ^^^^^^^^^^^^^^^^^^^^ expected `(Map<int, nat>, nat)`, found `()`
    |
    = note:  expected tuple `(vstd::map::Map<vstd::prelude::int, vstd::prelude::nat>, vstd::prelude::nat)`
            found unit type `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
Elapsed: 5s
Sampled Memory Usage: peak rust_verify RSS: 441MB, peak z3 RSS: 0MB, min free: 22794MB
Sampled CPU Usage: rust_verify: 3s, z3 children: 0s
